--- a/project/pom.xml
+++ b/project/pom.xml
@@ -141,6 +141,11 @@
 					<encoding>utf-8</encoding>
 				</configuration>
 			</plugin>
+			<plugin>
+		          <groupId>org.apache.maven.plugins</groupId>
+		          <artifactId>maven-war-plugin</artifactId>
+		          <version>3.3.1</version>
+     		 </plugin>
 
 		</plugins>
 
